vivado_projekty/tor_wizyjny/tor_wizyjny.sdk/.metadata/.plugins/org.eclipse.cdt.ui/hellocpp2.build.log
19:09:10 **** Auto Build of configuration Debug for project hellocpp2 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/main.cc'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../hellocpp2_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cc"
../src/main.cc: In function 'int main()':
../src/main.cc:10:5: error: 'print' was not declared in this scope
     print("Hello Worldcpp\n\r");
     ^~~~~
../src/main.cc:10:5: note: suggested alternative: 'printf'
     print("Hello Worldcpp\n\r");
     ^~~~~
     printf
make: *** [src/main.o] B³¹d 1

19:09:13 Build Finished (took 2s.865ms)

